--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="intro-text">
           <span class="name">Hees</span>
           <hr class="star-light">
-          <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+          <span class="skills">Web Developer -Hees  </span>
         </div>
       </div>
     </header>
