--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form method="POST" name="sentMessage" id="contactForm" novalidate action="http://formspree.io/klpoik@naver.com">
+            <form method="POST" action="http://formspree.io/klpoik@naver.com">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                   <label>Email Address</label>
@@ -181,7 +181,7 @@
               <br>
               <div id="success"></div>
               <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
+                <button type="submit" class="btn btn-success btn-lg">Send</button>
               </div>
             </form>
           </div>
