--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <br/>
             <p>2. 멀티캠퍼스 4차산업혁명 선도인력 양성 (2017.05 ~ 2018.01) 이수</p>
             <p>스마트팩토리 교육 / Java, Spring, Jsp, Oracle, Ruby, SAP, ABAP / 해커톤 참여</p>
-            <p>3. 영동대학교 졸업 (2011.02 ~ 2017.02)</p>
+            <p>3. 영동대학교 임베디드 소프트웨어학과 졸업 (2011.02 ~ 2017.02)</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p>Programming language</p>
