소개 문구 수정 및 포토폴리오 미완성 제거

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="intro-text">
           <span class="name">김성희</span>
           <hr class="star-light">
-          <span class="skills">개발은 한 언어가 아닌 여러 언어를 합쳐 만드는 퍼즐이라고 생각합니다. <br/>그래서 다양한 언어를 습득하고자 도전했고, 여러 프로젝트를 경험했습니다. <br/> 이를 바탕으로 퍼즐의 만능조각과 같은 개발자로 성장하기 위해 지속적인 노력하는 사람입니다. <br/> 좋은 인연이 되어서 함께할 수 있는 기회가 되었으면 좋겠습니다. <br/>방문해주셔서 감사합니다. </span>
+          <span class="skills">개발은 한 언어가 아닌 여러 언어를 합쳐 만드는 퍼즐이라고 생각합니다. <br/>그래서 다양한 언어를 습득하고자 도전했고, 여러 프로젝트를 경험했습니다. <br/> 이를 바탕으로 퍼즐의 만능조각과 같은 개발자로 성장하기 위해 꾸준히 노력하는 사람입니다. <br/> 좋은 인연이 되어서 함께할 수 있는 기회가 되었으면 좋겠습니다. <br/>방문해주셔서 감사합니다. </span>
         </div>
       </div>
     </header>
@@ -88,7 +88,7 @@
               <img class="img-fluid" src="img/portfolio/suik/suik-index.png" alt="">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <!-- <div class="col-sm-4 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -97,7 +97,7 @@
               </div>
               <img class="img-fluid" src="img/portfolio/circus.png" alt="">
             </a>
-          </div>
+          </div> -->
           <div class="col-sm-4 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
               <div class="caption">
