--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/mayFlower/mayFlower-flower.png" alt="">
+              <img class="img-fluid" src="img/portfolio/mayFlower/mayFlower-index.png" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -695,22 +695,34 @@
                       </strong>
                     </li>
                   </ul>
-                  <p>여자친구에게 꽃가게 웹페이지 제작을 부탁받아 진행하게 된 프로젝트이며, DB설계 부터 AWS EC2 서버 구축, S3 연동, Mailgun API 연동하여 진행했습니다. 현재 배너 제작 및 테스트를 진행하고 있으며, KCP 결제 모듈을 연동할 예정입니다.</p>
-                  <img class="img-fluid img-centered" src="img/portfolio/mayFlower/mayFlower-index.png" alt="">
-                  <img class="img-fluid img-centered" src="img/portfolio/mayFlower/mayFlower-index2.png" alt="">
+                  <p>여자친구에게 꽃가게 웹페이지 제작을 부탁받아 진행하게 된 프로젝트이며, DB설계 부터 AWS EC2 서버 구축, S3 연동, Mailgun API 연동하여 진행했습니다. 현재 테스트를 진행중이며, 네이버 웹마스터 도구 등록을 완료한 상태입니다. 그리고, 상품 등록 및 KCP 결제 모듈을 연동할 예정입니다.</p>
+                  <img class="img-fluid img-centered" src="img/portfolio/mayFlower/mayFlower-login.png" alt="">
                   <img class="img-fluid img-centered" src="img/portfolio/mayFlower/mayFlower-register.png" alt="">
                   <ul class="list-inline item-details" style="margin-top: 30px; margin-bottom: 30px;">
                     <li>< 기술설명 ><br/>
                       <strong>
-                        <a style="color: #18bc9c">1. 배너 슬라이드 적용</a>
+                        <a style="color: #18bc9c">1. 로그인 및 회원가입 기능 구현</a>
                       </strong>
                       <br/>
                       <strong>
-                        <a style="color: #18bc9c">2. 네이버 지도 API 연동을 통한 꽃가게 주소 연동 / 꽃가게 소개 페이지 미정</a>
+                        <a style="color: #18bc9c">2. Mailgun API 연동 및 보내고 API 연동을 통한 메일 인증 및 휴대폰 인증, 인증을 위한 난수 생성 및 Ajax를 통한 인증 요청</a>
+                      </strong>
+                    </li>
+                  </ul>
+                  <img class="img-fluid img-centered" src="img/portfolio/mayFlower/mayFlower-index.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/mayFlower/mayFlower-index2.png" alt="">
+                  <ul class="list-inline item-details" style="margin-top: 30px; margin-bottom: 30px;">
+                    <li>< 기술설명 ><br/>
+                      <strong>
+                        <a style="color: #18bc9c">1. 배너 슬라이드 적용 및 배너 제작</a>
                       </strong>
                       <br/>
                       <strong>
-                        <a style="color: #18bc9c">3. 이메일 인증을 위해 Mailgun API 연동, 휴대번호 인증을 위해 문자 API 연동, 인증을 위한 난수 생성 및 Ajax를 통한 인증 요청</a>
+                        <a style="color: #18bc9c">2. 네이버 지도 API 연동을 통한 꽃가게 주소 연동 및 인스타그램 연동</a>
+                      </strong>
+                      <br/>
+                      <strong>
+                        <a style="color: #18bc9c"></a>
                       </strong>
                     </li>
                   </ul>
