파이썬, R 공부 진행중

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <p>Programming language</p>
             <p>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Ruby</div>
+                <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Ruby</div>
               </div>
             </p>
             <p>
@@ -176,6 +176,16 @@
             <p>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Java</div>
+              </div>
+            </p>
+            <p>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Python</div>
+              </div>
+            </p>
+            <p>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">R</div>
               </div>
             </p>
             <p>DB</p>
@@ -257,7 +267,8 @@
             </div>
             <div class="footer-col col-md-4">
               <h3>2019 Plan</h3>
-              <p>Object-c, Swift, Python, MongoDB</p>
+              <p>Object-c, Swift, Python, R, MongoDB</p>
+              <p style="color: yellow">Python, R 진행중</p>
             </div>
           </div>
         </div>
